# LearnCode

./: .gitignore
onnx/1/: create.py
onnx/2/: main.py
onnx/3/: Protobuf.py
onnx/PyOp/: creat_model.py  main.py  model.onnx  mymodule.py
onnx/PyTorchCustomOperator/ort_custom_op/: CMakeLists.txt  custom_op.h  custom_op_test.cc
onnx/PyTorchCustomOperator/pytorch_custom_op/: export_custom_op.py  model.onnx  setup.py
onnx/Simplifier/: after_reshape.onnx  just_reshape.onnx  main.py
onnx/get_value_from_andynode/: add_output.py  mnist.py  model.onnx
onnx/mnist/: mnist.py
onnx/mnist/mnist/: create_onnx.py  get_info.py  mnist_hua.onnx  mnist_hua_insert.onnx  mnist_hua_insert_V1.onnx  mnist_hua_new.onnx  mnist_hua_remove_inputs.onnx  model_extra_output_v1.onnx  surgery.py  transformer_weight.py
onnx/tutorials/PyTorchCustomOperator/ort_custom_op/: CMakeLists.txt
onnx/tutorials/PyTorchCustomOperator/pytorch_custom_op/: export_custom_op.py  model.onnx  setup.py
